<resources>
    <string name="app_name">booklore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Titulo">Titulo</string>
    <string name="TituloNo">Error al cargar el libro</string>
    <string name="DescripcionNo">Se ha producido un error al cargar la informacion del libro solicitado</string>
    <string name="Sinopsis">Sinopsis</string>
    <string name="Frases">Frases</string>
    <string name="example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut sollicitudin sem, id pellentesque dolor. Sed non lobortis enim. Duis lobortis semper nulla at condimentum. Praesent vel malesuada odio. Integer id lacus dapibus, facilisis risus at, ornare lorem. Donec efficitur vestibulum dolor sit amet iaculis. Quisque vitae auctor diam, sit amet ultrices augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</string>
    <string name="Developers">Desarrolladores</string>
    <string name="Sam">Carlos Samuel Paniagua Nuñez</string>
    <string name="KS">Victor Jose Ramirez Osman</string>
    <string name="Morgan">Elmer Oswaldo Figueroa Magaña</string>
    <string name="Hugo">Victor Alexander Padilla Ramos</string>
    <string name="version">Version 1.0</string>
    <string name="title_activity_libreria__ventas">Libreria_Ventas</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="Reservas">Reservas de Libros</string>
    <string name="Cotizaciones">Cotizaciones de Libros</string>
    <string name="Precio">Precio</string>
    <string name="ver_mapa">Ver mapa</string>
    <string name="Nombre">Nombre</string>
    <string name="Cantidad">Cantidad</string>
</resources>
