<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/banner"
            android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Developers"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sam"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/KS"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Morgan"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hugo"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>