<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibreriaWishlist"
    android:paddingHorizontal="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/Titulo"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/ivPortada"
            android:layout_width="120dp"
            android:layout_height="195dp"
            android:src="@drawable/portada1"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"/>
        <Button
            android:id="@+id/btnMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_mapa"/>
    </LinearLayout>
</ScrollView>