<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cotizaciones"
    android:orientation="vertical"
    android:background="@color/colorDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cotizaciones"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/portada3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="BIENVENIDO A COTIZACIONES"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edtprecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:hint="@string/Precio"
            android:inputType="numberDecimal"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtnombrecotizaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:hint="@string/Nombre"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Ingrese un precio y un nombre para cotizar un libro"
        android:textColor="@color/colorWhite"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btncotizar"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="125dp"
        android:background="@color/colorBlack"
        android:onClick="Veridico"
        android:text="Aceptar"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</LinearLayout>