<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Leyendo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:background="@drawable/banner"
            android:layout_marginBottom="25dp"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#76a5af"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <ProgressBar
                android:layout_width="350dp"
                android:layout_height="30dp"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="25"
                android:progressTint="@color/colorFondo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/PagActual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="0"/>
                <TextView
                    android:id="@+id/separador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="/"/>
                <TextView
                    android:id="@+id/TotalPag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="100"/>

                <Button
                    android:id="@+id/btnAvanzar"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="Avanzar"
                    android:layout_marginLeft="30dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="MKEF01"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:paddingTop="25dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sinopsis"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="25dp"
                android:background="@color/colorBlack"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Frases"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="25dp"
                android:background="@color/colorBlack"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>